Poprawione progress bary bez proc

--- a/app/views/health_assessment/wynik.html.erb
+++ b/app/views/health_assessment/wynik.html.erb
@@ -1,6 +1,8 @@
 <%= przelicz_parametry %>
 <div class="container">
-<div class="m-3"><h1 class="text-center">Twoje wyniki personalnej ankiety witalności </h1></div>
+<div class="m-3"><h1 class="text-center">Twoje wyniki personalnej ankiety witalności </h1>
+<p class="text-center">To jest wersja testowa ankiety. Testuj jej działanie i jeśli masz uwagi, prześlij je do nas </p>
+</div>
 
 <div class="row">
 
@@ -16,8 +18,6 @@
           <div class="progress">
            <%= tag(:span, class: "progress-bar #{wstaw_kolor(policz_procent($parametry[:pokarmowy],$absolute_counts[:pokarmowy]))}", style: "width: #{policz_procent($parametry[:pokarmowy],$absolute_counts[:pokarmowy])}%") %>
 
-
-           <h5><small><%= policz_procent($parametry[:pokarmowy],$absolute_counts[:pokarmowy]) %>%</small></h5>
           </div>
           <br/>
           <p class="text-muted"> Dobra kondycja układu pokarmowego jest niezbędna do prawidłowego przyswajania składników odżywczych, w tym witamin minerałów.
@@ -45,7 +45,6 @@ Najważniejsze elementy tego układu to: przełyk, żołądek, jelita, wątroba 
           <h3><%= wydaj_ocene(policz_procent($parametry[:energia],$absolute_counts[:energia])) %></h3>
           <div class="progress">
            <%= tag(:span, class: "progress-bar #{wstaw_kolor(policz_procent($parametry[:energia],$absolute_counts[:energia]))}", style: "width: #{policz_procent($parametry[:energia],$absolute_counts[:energia])}%") %>
-           <h5><small><%= policz_procent($parametry[:energia],$absolute_counts[:energia]) %>%</small></h5>
           </div>
           <br/>
           <p class="text-muted">Osłabiony organizm nie jest w stanie sprostać wymaganiom wpółczesnego świata.
@@ -74,7 +73,6 @@ Zmęczenie, senność, złe samopoczucie to nie powinna być Twoja codzienność
             <h3><%= wydaj_ocene(policz_procent($parametry[:kardio],$absolute_counts[:kardio])) %></h3>
             <div class="progress">
              <%= tag(:span, class: "progress-bar #{wstaw_kolor(policz_procent($parametry[:kardio],$absolute_counts[:kardio]))}", style: "width: #{policz_procent($parametry[:kardio],$absolute_counts[:kardio])}%") %>
-             <h5><small><%= policz_procent($parametry[:kardio],$absolute_counts[:kardio]) %>%</small></h5>
             </div>
             <br/>
             <p class="text-muted"> Prawdopobnie najważniejszy układ Twojego organizmu odpowiadający za transport tlenu i składników odżywczych.
@@ -101,7 +99,6 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
             <h3><%= wydaj_ocene(policz_procent($parametry[:oddechowy],$absolute_counts[:oddechowy])) %></h3>
             <div class="progress">
              <%= tag(:span, class: "progress-bar #{wstaw_kolor(policz_procent($parametry[:oddechowy],$absolute_counts[:oddechowy]))}", style: "width: #{policz_procent($parametry[:oddechowy],$absolute_counts[:oddechowy])}%") %>
-             <h5><small><%= policz_procent($parametry[:oddechowy],$absolute_counts[:oddechowy]) %>%</small></h5>
             </div>
             <br/>
             <p class="text-muted">Oddychanie to najważniejsza funkcja ludzkiego organizmu. Coraz trudniej zachować układ oddechowy w dobrej kondycji. Otaczające nas powietrze jest pełne spalin i innych zanieczyszczeń.
@@ -129,7 +126,6 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
           <h3><%= wydaj_ocene(policz_procent($parametry[:moczowy],$absolute_counts[:moczowy])) %></h3>
           <div class="progress">
            <%= tag(:span, class: "progress-bar #{wstaw_kolor(policz_procent($parametry[:moczowy],$absolute_counts[:moczowy]))}", style: "width: #{policz_procent($parametry[:moczowy],$absolute_counts[:moczowy])}%") %>
-           <h5><small><%= policz_procent($parametry[:moczowy],$absolute_counts[:moczowy]) %>%</small></h5>
           </div>
           <br/>
           <p class="text-muted"> Układ moczowy pozwala pozbyć się z organizmu niebiezpiecznych toksyn i szkodliwych produktów przemiany materii.
@@ -155,7 +151,6 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
           <h3><%= wydaj_ocene(policz_procent($parametry[:hormonalny],$absolute_counts[:hormonalny])) %></h3>
           <div class="progress">
            <%= tag(:span, class: "progress-bar #{wstaw_kolor(policz_procent($parametry[:hormonalny],$absolute_counts[:hormonalny]))}", style: "width: #{policz_procent($parametry[:hormonalny],$absolute_counts[:hormonalny])}%") %>
-           <h5><small><%= policz_procent($parametry[:hormonalny],$absolute_counts[:hormonalny]) %>%</small></h5>
           </div>
           <br/>
           <p class="text-muted">Układ hormonalny zapewnia wewnętrzną komunikację między narządami, która reguluje szeroko pojęty metabolizm, wzrost i dojrzewanie, instynkty i emocje, a także funkcje seksualne.</p>
@@ -181,7 +176,6 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
           <h3><%= wydaj_ocene(policz_procent($parametry[:nerwowy],$absolute_counts[:nerwowy])) %></h3>
           <div class="progress">
            <%= tag(:span, class: "progress-bar #{wstaw_kolor(policz_procent($parametry[:nerwowy],$absolute_counts[:nerwowy]))}", style: "width: #{policz_procent($parametry[:nerwowy],$absolute_counts[:nerwowy])}%") %>
-           <h5><small><%= policz_procent($parametry[:nerwowy],$absolute_counts[:nerwowy]) %>%</small></h5>
           </div>
           <br/>
           <p class="text-muted"> Zdrowy układ nerwowy to gwarancja odpowiedniego reagowania na bodźce napływające z otoczenia. Mózg i nerwy odpowiadają za sprawne współdziałanie wszystkich organów ze sobą i dostosowywanie się do środowiska.
@@ -207,7 +201,6 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
           <h3><%= wydaj_ocene(policz_procent($parametry[:ruchu],$absolute_counts[:ruchu])) %></h3>
           <div class="progress">
            <%= tag(:span, class: "progress-bar #{wstaw_kolor(policz_procent($parametry[:ruchu],$absolute_counts[:ruchu]))}", style: "width: #{policz_procent($parametry[:ruchu],$absolute_counts[:ruchu])}%") %>
-           <h5><small><%= policz_procent($parametry[:ruchu],$absolute_counts[:ruchu]) %>%</small></h5>
           </div>
           <br/>
           <p class="text-muted"> Zdrowe mięśnie, kości i stawy to gwaracja mobilności i odporności na kontuzje. Dbaj o nie w każdym wieku, nawet jeśli jeszcze nie bolą. Ruch to zdrowie!
@@ -235,7 +228,6 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
           <h3><%= wydaj_ocene(policz_procent($parametry[:immune],$absolute_counts[:immune])) %></h3>
           <div class="progress">
            <%= tag(:span, class: "progress-bar #{wstaw_kolor(policz_procent($parametry[:immune],$absolute_counts[:immune]))}", style: "width: #{policz_procent($parametry[:immune],$absolute_counts[:immune])}%") %>
-           <h5><small><%= policz_procent($parametry[:immune],$absolute_counts[:immune]) %>%</small></h5>
           </div>
           <br/>
           <p class="text-muted"> Nikomu nie trzeba tłumaczyć, jak ważne jest utrzymanie odporności w dobrej kondycji. Nikt przecież nie chce chorować.
