--- a/app/views/health_assessment/wynik2.html.erb
+++ b/app/views/health_assessment/wynik2.html.erb
@@ -17,7 +17,7 @@
           <p class="text-muted"> Dobra kondycja układu pokarmowego jest niezbędna do prawidłowego przyswajania składników odżywczych, w tym witamin minerałów.
 Najważniejsze elementy tego układu to: przełyk, żołądek, jelita, wątroba i trzustka.
           </p>
-          <a href="https://e-naturessunshine.com/shop/categories/1,0,suplementy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+          <a href="https://e-naturessunshine.com/shop/categories/18,1,uklad-odpornosciowy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
         </div>
         <div class="col">
           <%= image_tag("diagram-digestive.png", :alt => "układ pokarmowy", class: 'img-fluid float-right') %>
@@ -40,7 +40,7 @@ Najważniejsze elementy tego układu to: przełyk, żołądek, jelita, wątroba 
           <p class="text-muted">Osłabiony organizm nie jest w stanie sprostać wymaganiom wpółczesnego świata.
 Zmęczenie, senność, złe samopoczucie to nie powinna być Twoja codzienność.
           </p>
-          <a href="https://e-naturessunshine.com/shop/categories/1,0,suplementy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+          <a href="https://e-naturessunshine.com/shop/categories/12,1,energia-i-metabolizm.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
         </div>
         <div class="col">
           <%= image_tag("diagram-body_composition.png", :alt => "układ pokarmowy", class: 'img-fluid float-right') %>
@@ -65,7 +65,7 @@ Zmęczenie, senność, złe samopoczucie to nie powinna być Twoja codzienność
             <p class="text-muted"> Prawdopobnie najważniejszy układ Twojego organizmu odpowiadający za transport tlenu i składników odżywczych.
 Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczne i mikrokrążenie (naczynia włosowate).
             </p>
-            <a href="https://e-naturessunshine.com/shop/categories/1,0,suplementy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+            <a href="https://e-naturessunshine.com/shop/categories/13,1,uklad-krazenia.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
           </div>
           <div class="col">
             <%= image_tag("diagram-circulatory.png", :alt => "układ krążenia", class: 'img-fluid float-right') %>
@@ -87,7 +87,7 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
             </div>
             <p class="text-muted">Oddychanie to najważniejsza funkcja ludzkiego organizmu. Coraz trudniej zachować układ oddechowy w dobrej kondycji. Otaczające nas powietrze jest pełne spalin i innych zanieczyszczeń.
             </p>
-            <a href="https://e-naturessunshine.com/shop/categories/1,0,suplementy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+            <a href="https://e-naturessunshine.com/shop/categories/14,1,uklad-oddechowy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
           </div>
           <div class="col">
             <%= image_tag("diagram-respiratory.png", :alt => "układ oddechowy", class: 'img-fluid float-right') %>
@@ -111,7 +111,7 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
           </div>
           <p class="text-muted"> Układ moczowy pozwala pozbyć się z organizmu niebiezpiecznych toksyn i szkodliwych produktów przemiany materii.
           </p>
-          <a href="https://e-naturessunshine.com/shop/categories/1,0,suplementy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+          <a href="https://e-naturessunshine.com/shop/categories/15,1,uklad-moczowy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
         </div>
         <div class="col">
           <%= image_tag("diagram-urinary.png", :alt => "układ moczowy", class: 'img-fluid float-right') %>
@@ -132,7 +132,7 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
            <h5><small><%= policz_procent($parametry[:hormonalny],$absolute_counts[:hormonalny]) %>%</small></h5>
           </div>
           <p class="text-muted">Układ hormonalny zapewnia wewnętrzną komunikację między narządami, która reguluje szeroko pojęty metabolizm, wzrost i dojrzewanie, instynkty i emocje, a także funkcje seksualne.</p>
-          <a href="https://e-naturessunshine.com/shop/categories/1,0,suplementy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+          <a href="https://e-naturessunshine.com/shop/categories/16,1,uklad-hormonalny.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
         </div>
         <div class="col">
           <%= image_tag("diagram-glandular.png", :alt => "układ hormonalny", class: 'img-fluid float-right') %>
@@ -156,7 +156,7 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
           </div>
           <p class="text-muted"> Zdrowy układ nerwowy to gwarancja odpowiedniego reagowania na bodźce napływające z otoczenia. Mózg i nerwy odpowiadają za sprawne współdziałanie wszystkich organów ze sobą i dostosowywanie się do środowiska.
           </p>
-          <a href="https://e-naturessunshine.com/shop/categories/1,0,suplementy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+          <a href="https://e-naturessunshine.com/shop/categories/19,1,uklad-nerwowy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
         </div>
         <div class="col">
           <%= image_tag("diagram-nervous.png", :alt => "układ nerwowy", class: 'img-fluid float-right') %>
@@ -178,7 +178,7 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
           </div>
           <p class="text-muted"> Zdrowe mięśnie, kości i stawy to gwaracja mobilności i odporności na kontuzje. Dbaj o nie w każdym wieku, nawet jeśli jeszcze nie bolą. Ruch to zdrowie!
           </p>
-          <a href="https://e-naturessunshine.com/shop/categories/1,0,suplementy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+          <a href="https://e-naturessunshine.com/shop/categories/17,1,uklad-miesniowo-szkieletowy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
         </div>
         <div class="col">
           <%= image_tag("diagram-structural.png", :alt => "układ mięśniowo-szkieletowy", class: 'img-fluid float-right') %>
@@ -202,7 +202,7 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
           </div>
           <p class="text-muted"> Nikomu nie trzeba tłumaczyć, jak ważne jest utrzymanie odporności w dobrej kondycji. Nikt przecież nie chce chorować.
           </p>
-          <a href="https://e-naturessunshine.com/shop/categories/1,0,suplementy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+          <a href="https://e-naturessunshine.com/shop/categories/18,1,uklad-odpornosciowy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
         </div>
         <div class="col">
           <%= image_tag("diagram-immune.png", :alt => "układ odpornościowy", class: 'img-fluid float-right') %>
