--- a/app/views/health_assessment/wynik.html.erb
+++ b/app/views/health_assessment/wynik.html.erb
@@ -30,7 +30,7 @@ Najważniejsze elementy tego układu to: przełyk, żołądek, jelita, wątroba 
         </div>
       </div>
         <div class="row m-1 p-1">
-          <a href="https://www.e-naturessunshine.com/shop/categories/11,0,uklad-pokarmowy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+          <a href="https://www.e-naturessunshine.com/shop/categories/11,0,uklad-pokarmowy.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
         </div>
       </div>
     </div>
@@ -57,7 +57,7 @@ Zmęczenie, senność, złe samopoczucie to nie powinna być Twoja codzienność
         </div>
       </div>
       <div class="row m-1 p-1">
-        <a href="https://www.e-naturessunshine.com/shop/categories/12,0,energia-i-metabolizm.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+        <a href="https://www.e-naturessunshine.com/shop/categories/12,0,energia-i-metabolizm.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
       </div>
     </div>
   </div>
@@ -85,7 +85,7 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
           </div>
         </div>
         <div class="row m-1 p-1">
-          <a href="https://www.e-naturessunshine.com/shop/categories/13,0,uklad-krazenia.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+          <a href="https://www.e-naturessunshine.com/shop/categories/13,0,uklad-krazenia.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
         </div>
       </div>
     </div>
@@ -110,7 +110,7 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
           </div>
         </div>
         <div class="row m-1 p-1">
-          <a href="https://www.e-naturessunshine.com/shop/categories/14,0,uklad-oddechowy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+          <a href="https://www.e-naturessunshine.com/shop/categories/14,0,uklad-oddechowy.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
         </div>
       </div>
     </div>
@@ -137,7 +137,7 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
         </div>
       </div>
       <div class="row m-1 p-1">
-        <a href="https://www.e-naturessunshine.com/shop/categories/15,0,uklad-moczowy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+        <a href="https://www.e-naturessunshine.com/shop/categories/15,0,uklad-moczowy.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
       </div>
     </div>
   </div>
@@ -160,7 +160,7 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
         </div>
       </div>
       <div class="row m-1 p-1">
-        <a href="https://www.e-naturessunshine.com/shop/categories/16,0,uklad-hormonalny.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+        <a href="https://www.e-naturessunshine.com/shop/categories/16,0,uklad-hormonalny.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
       </div>
     </div>
   </div>
@@ -187,7 +187,7 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
         </div>
       </div>
       <div class="row m-1 p-1">
-        <a href="https://www.e-naturessunshine.com/shop/categories/19,0,uklad-nerwowy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+        <a href="https://www.e-naturessunshine.com/shop/categories/19,0,uklad-nerwowy.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
       </div>
     </div>
   </div>
@@ -212,7 +212,7 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
         </div>
       </div>
       <div class="row m-1 p-1">
-        <a href="https://www.e-naturessunshine.com/shop/categories/17,0,uklad-miesniowo-szkieletowy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+        <a href="https://www.e-naturessunshine.com/shop/categories/17,0,uklad-miesniowo-szkieletowy.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
       </div>
     </div>
   </div>
@@ -239,7 +239,7 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
         </div>
       </div>
       <div class="row m-1 p-1">
-        <a href="https://www.e-naturessunshine.com/shop/categories/18,0,uklad-odpornosciowy.html" class="btn btn-success" role="button">Zobacz rekomendowane produkty</a>
+        <a href="https://www.e-naturessunshine.com/shop/categories/18,0,uklad-odpornosciowy.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
       </div>
     </div>
   </div>
