--- a/app/views/layouts/_footer.html
+++ b/app/views/layouts/_footer.html
@@ -6,6 +6,7 @@
 Uwaga! Zawsze zasięgnij porady lekarza lub innego specjalisty z kręgu zawodów medycznych przed rozpoczęciem leczenia lub zaprzestaniem leczenia.
 Ankieta służy wyłącznie celom edukacyjnym i nie jest przeznaczona ani nie może zastąpić konsultacji z lekarzem. Jej wynik ani ocena nie mogą być wykorzystywane do celów diagnostycznych ani leczniczych, ani do zapobiegania chorobom, objawom lub innym problemom zdrowotnym. Wynik nie stanowi porady ani zaleceń, ani ze strony właściciela, ani operatora strony, ani twórcy ankiety.
 Każda decyzja podjęta w oparciu o niniejszą ankietę podejmowana jest według własnego uznania i na własne ryzyko i odpowiedzialność. Właściciel, operator ani twórca tej strony internetowej nie ponoszą odpowiedzialności za uszczerbki na zdrowiu, szkody, straty ani inne negatywne konsekwencje działania zrealizowanego na podstawie informacji zawartych w niniejszej ankiecie lub jej wyników.
+Suplementy diety nie mogą być stosowane jako substytut zróżnicowanej diety. Zrównoważony sposób żywienia oraz zdrowy tryb życia są podstawą prawidłowego funkcjonowania organizmu.
 </small></p>
 
 </div>
