dodane linki do integmed i UE

--- a/app/views/health_assessment/wynik.html.erb
+++ b/app/views/health_assessment/wynik.html.erb
@@ -32,13 +32,19 @@ Najważniejsze elementy tego układu to: przełyk, żołądek, jelita, wątroba 
         <div class="row m-1 p-1">
           <a href="https://www.e-naturessunshine.com/shop/categories/11,0,uklad-pokarmowy.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
         </div>
+        <div class="container">
+          <p class="row m-1 p-1">Dowiedz się więcej: </p>
+          <p class="row m-1 p-1"><a href="https://integmed.pl/tag/uklad-pokarmowy/" target="_blank"> Integmed.pl </a></p>
+          <p class="row m-1 p-1"><a href="http://ec.europa.eu/food/safety/labelling_nutrition/claims/register/public/?event=register.home " target="_blank"> Rejestr UE </a></p>
+
+        </div>
       </div>
     </div>
 
 
   <div class="col-sm-6">
     <div class="container border border-secondary m-1 p-2">
-      <div class="row m-1"> <h2 class="text-success"> Energia </h2> </div>
+      <div class="row m-1"> <h2 class="text-success"> Energia i metabolizm</h2> </div>
       <div class="row m-1">
         <div class="col">
           <p class="text-muted">Można podejrzewać, że twój stan energii jest...</p>
@@ -58,6 +64,12 @@ Zmęczenie, senność, złe samopoczucie to nie powinna być Twoja codzienność
       </div>
       <div class="row m-1 p-1">
         <a href="https://www.e-naturessunshine.com/shop/categories/12,0,energia-i-metabolizm.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
+      </div>
+      <div class="container">
+        <p class="row m-1 p-1">Dowiedz się więcej: </p>
+        <p class="row m-1 p-1"><a href="https://integmed.pl/tag/energia-i-metabolizm/" target="_blank"> Integmed.pl </a></p>
+        <p class="row m-1 p-1"><a href="http://ec.europa.eu/food/safety/labelling_nutrition/claims/register/public/?event=register.home " target="_blank"> Rejestr UE </a></p>
+
       </div>
     </div>
   </div>
@@ -87,6 +99,12 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
         <div class="row m-1 p-1">
           <a href="https://www.e-naturessunshine.com/shop/categories/13,0,uklad-krazenia.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
         </div>
+        <div class="container">
+          <p class="row m-1 p-1">Dowiedz się więcej: </p>
+          <p class="row m-1 p-1"><a href="https://integmed.pl/tag/uklad-krazenia/" target="_blank"> Integmed.pl </a></p>
+          <p class="row m-1 p-1"><a href="http://ec.europa.eu/food/safety/labelling_nutrition/claims/register/public/?event=register.home " target="_blank"> Rejestr UE </a></p>
+
+        </div>
       </div>
     </div>
 
@@ -112,6 +130,12 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
         <div class="row m-1 p-1">
           <a href="https://www.e-naturessunshine.com/shop/categories/14,0,uklad-oddechowy.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
         </div>
+        <div class="container">
+          <p class="row m-1 p-1">Dowiedz się więcej: </p>
+          <p class="row m-1 p-1"><a href="https://integmed.pl/tag/uklad-oddechowy/" target="_blank"> Integmed.pl </a></p>
+          <p class="row m-1 p-1"><a href="http://ec.europa.eu/food/safety/labelling_nutrition/claims/register/public/?event=register.home " target="_blank"> Rejestr UE </a></p>
+
+        </div>
       </div>
     </div>
 </div>
@@ -122,7 +146,7 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
       <div class="row m-1"> <h2 class="text-success"> Układ moczowy </h2> </div>
       <div class="row m-1">
         <div class="col">
-          <p class="text-muted">Można podejrzewać, że twój stan układu moczowego  jest...</p>
+          <p class="text-muted">Można podejrzewać, że twój stan układu moczowego jest...</p>
           <h3><%= wydaj_ocene(policz_procent($parametry[:moczowy],$absolute_counts[:moczowy])) %></h3>
           <div class="progress">
            <%= tag(:span, class: "progress-bar #{wstaw_kolor(policz_procent($parametry[:moczowy],$absolute_counts[:moczowy]))}", style: "width: #{policz_procent($parametry[:moczowy],$absolute_counts[:moczowy])}%") %>
@@ -138,6 +162,12 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
       </div>
       <div class="row m-1 p-1">
         <a href="https://www.e-naturessunshine.com/shop/categories/15,0,uklad-moczowy.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
+      </div>
+      <div class="container">
+        <p class="row m-1 p-1">Dowiedz się więcej: </p>
+        <p class="row m-1 p-1"><a href="https://integmed.pl/tag/uklad-moczowy/" target="_blank"> Integmed.pl </a></p>
+        <p class="row m-1 p-1"><a href="http://ec.europa.eu/food/safety/labelling_nutrition/claims/register/public/?event=register.home " target="_blank"> Rejestr UE </a></p>
+
       </div>
     </div>
   </div>
@@ -161,6 +191,12 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
       </div>
       <div class="row m-1 p-1">
         <a href="https://www.e-naturessunshine.com/shop/categories/16,0,uklad-hormonalny.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
+      </div>
+      <div class="container">
+        <p class="row m-1 p-1">Dowiedz się więcej: </p>
+        <p class="row m-1 p-1"><a href="https://integmed.pl/tag/uklad-hormonalny/" target="_blank"> Integmed.pl </a></p>
+        <p class="row m-1 p-1"><a href="http://ec.europa.eu/food/safety/labelling_nutrition/claims/register/public/?event=register.home " target="_blank"> Rejestr UE </a></p>
+
       </div>
     </div>
   </div>
@@ -189,6 +225,12 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
       <div class="row m-1 p-1">
         <a href="https://www.e-naturessunshine.com/shop/categories/19,0,uklad-nerwowy.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
       </div>
+      <div class="container">
+        <p class="row m-1 p-1">Dowiedz się więcej: </p>
+        <p class="row m-1 p-1"><a href="https://integmed.pl/tag/uklad-nerwowy/" target="_blank"> Integmed.pl </a></p>
+        <p class="row m-1 p-1"><a href="http://ec.europa.eu/food/safety/labelling_nutrition/claims/register/public/?event=register.home " target="_blank"> Rejestr UE </a></p>
+
+      </div>
     </div>
   </div>
 
@@ -213,6 +255,12 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
       </div>
       <div class="row m-1 p-1">
         <a href="https://www.e-naturessunshine.com/shop/categories/17,0,uklad-miesniowo-szkieletowy.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
+      </div>
+      <div class="container">
+        <p class="row m-1 p-1">Dowiedz się więcej: </p>
+        <p class="row m-1 p-1"><a href="https://integmed.pl/tag/uklad-ruchu/" target="_blank"> Integmed.pl </a></p>
+        <p class="row m-1 p-1"><a href="http://ec.europa.eu/food/safety/labelling_nutrition/claims/register/public/?event=register.home " target="_blank"> Rejestr UE </a></p>
+
       </div>
     </div>
   </div>
@@ -240,6 +288,12 @@ Najważniejsze elementy układu to: serce, tętnice, żyły, naczynia limfatyczn
       </div>
       <div class="row m-1 p-1">
         <a href="https://www.e-naturessunshine.com/shop/categories/18,0,uklad-odpornosciowy.html" class="btn btn-success" role="button" target="_blank">Zobacz rekomendowane produkty</a>
+      </div>
+      <div class="container">
+        <p class="row m-1 p-1">Dowiedz się więcej: </p>
+        <p class="row m-1 p-1"><a href="https://integmed.pl/tag/uklad-immunologiczny/" target="_blank"> Integmed.pl </a></p>
+        <p class="row m-1 p-1"><a href="http://ec.europa.eu/food/safety/labelling_nutrition/claims/register/public/?event=register.home " target="_blank"> Rejestr UE </a></p>
+
       </div>
     </div>
   </div>
